--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   font-family: "Dm Sans", sans-serif;
 }
 
-.icon-container, .humidicontext, .windspeedicontext,.winddirectionicontext{
+.humidicontext, .windspeedicontext,.winddirectionicontext{
   display: flex;
   width: fit-content;
   height: auto;
@@ -85,7 +85,19 @@ body {
   align-items: start;
   column-gap: 0.2rem;
   font-family: "Dm Sans", sans-serif;
+  font-weight: 700;
 
+}
+
+.icon-container{
+  display: flex;
+  width: 100%;
+  height: auto;
+  flex-direction: row;
+  align-items: start;
+  column-gap: 0.2rem;
+  font-family: "Dm Sans", sans-serif;
+  font-weight: 700;
 }
 
 .icon-container, .humidicontext, .windspeedicontext  {
