--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     padding: 2.5rem;
     border: 1px solid #ddd;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     /* row-gap: 2rem; */
     display: flex;
     flex-direction: column;
